ansible/files/ocp/nova-api/2/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: &name nova-api
  namespace: openstack
  labels:
    app: *name
spec:
  ports:
  - name: api
    port: 8774
    protocol: TCP
  selector:
    app: *name
  type: ClusterIP
