ansible/files/ocp/nova-api/2/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: nova-api
  namespace: openstack
spec:
  host: nova.apps.ostest.test.metalkube.org
  path: /
  to:
    kind: Service
    name: nova-api
  port:
    targetPort: api
